--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,12 @@ body {
   position: relative;
   z-index: 1; }
 
+@font-face {
+  font-family: 'edoregular';
+  src: url("../fonts/edo-webfont.eot");
+  src: url("../fonts/edo-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/edo-webfont.woff") format("woff"), url("../fonts/edo-webfont.ttf") format("truetype"), url("../fonts/edo-webfont.svg#edoregular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
 .ryu {
   float: left;
   width: 659px;
@@ -17,13 +23,14 @@ body {
   .ryu > div {
     background-repeat: no-repeat; }
 
-.ryu-still, .ryu-ready, .ryu-throwing {
+.ryu-still, .ryu-ready, .ryu-throwing, .ryu-cool {
   width: 659px;
   height: 494px; }
 
 .ryu-ready,
 .ryu-throwing,
-.hadouken {
+.hadouken,
+.ryu-cool {
   display: none; }
 
 .ryu-ready {
@@ -44,5 +51,33 @@ body {
   z-index: 10;
   top: 170px;
   left: 590px; }
+
+.ryu-cool {
+  background-image: url("../images/ryu-cool.gif"); }
+
+.text-container {
+  float: right;
+  height: 500px;
+  width: 45%; }
+
+.sf-logo {
+  padding-top: 120px; }
+
+.jq-logo {
+  padding-top: 15%; }
+
+.instructions,
+.jq-logo,
+.sf-logo {
+  display: none;
+  background-repeat: no-repeat; }
+
+.instructions {
+  font-family: 'edoregular';
+  font-size: 4em;
+  margin-right: 1em;
+  padding-top: .4em; }
+  .instructions .text-2 {
+    text-align: right; }
 
 /*# sourceMappingURL=main.css.map */
