--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,5 @@
+// ========================= GENERAL =========================
+
 body {
     background-color: black;
 }
@@ -12,6 +14,20 @@ body {
     z-index: 1;
 }
 
+@font-face {
+    font-family: 'edoregular';
+    src: url('../fonts/edo-webfont.eot');
+    src: url('../fonts/edo-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/edo-webfont.woff') format('woff'),
+         url('../fonts/edo-webfont.ttf') format('truetype'),
+         url('../fonts/edo-webfont.svg#edoregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+// =============================== RYU =================================
+
 .ryu {
   float: left;
   width: 659px;
@@ -21,14 +37,15 @@ body {
   }
 }
 
-.ryu-still, .ryu-ready, .ryu-throwing {
+.ryu-still, .ryu-ready, .ryu-throwing, .ryu-cool {
   width: 659px;
   height: 494px;
 }
 
 .ryu-ready,
 .ryu-throwing,
-.hadouken {
+.hadouken,
+.ryu-cool {
   display: none;
 }
 
@@ -54,3 +71,41 @@ body {
   top: 170px;
   left: 590px;
 }
+
+.ryu-cool {
+  background-image: url("../images/ryu-cool.gif");
+}
+
+// ======================= TEXT =================================
+
+.text-container {
+  float: right;
+  height: 500px;
+  width: 45%;
+}
+
+.sf-logo {
+  padding-top: 120px;
+}
+
+.jq-logo {
+  padding-top: 15%;
+}
+
+.instructions,
+.jq-logo,
+.sf-logo {
+  display: none;
+  background-repeat: no-repeat;
+}
+
+.instructions {
+  font-family: 'edoregular';
+  font-size: 4em;
+  margin-right: 1em;
+  padding-top: .4em;
+  .text-2 {
+    text-align: right;
+  }
+}
+
