--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@ body {
 .container {
   background-color: white;
   margin-top: 110px;
-  padding-left: 100px;
   min-width: 1200px;
   height: 500px;
   position: relative;
@@ -16,11 +15,11 @@ body {
   src: url("../fonts/edo-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/edo-webfont.woff") format("woff"), url("../fonts/edo-webfont.ttf") format("truetype"), url("../fonts/edo-webfont.svg#edoregular") format("svg");
   font-weight: normal;
   font-style: normal; }
-.ryu {
+.ryu, .ryu-angry {
   float: left;
-  width: 659px;
+  width: 49%;
   height: 494px; }
-  .ryu > div {
+  .ryu > div, .ryu-angry > div {
     background-repeat: no-repeat; }
 
 .ryu-still, .ryu-ready, .ryu-throwing, .ryu-cool {
@@ -76,8 +75,15 @@ body {
   font-family: 'edoregular';
   font-size: 4em;
   margin-right: 1em;
-  padding-top: .4em; }
+  padding-top: 0.0009em; }
   .instructions .text-2 {
     text-align: right; }
+
+.ryu-angry {
+  display: none;
+  float: right;
+  transform: scaleX(-1);
+  -webkit-filter: hue-rotate(90deg);
+  filter: hue-rotate(90deg); }
 
 /*# sourceMappingURL=main.css.map */
